--- a/.github/workflows/Simple.yml
+++ b/.github/workflows/Simple.yml
@@ -1,1 +1,10 @@
+name: Hello World
 
+on: [push]
+jobs:
+  build: 
+    runs-on: ubuntu-latest
+ 
+    steps:
+      - name: Print Hello World
+        run: echo "Hello, World!"
