--- a/.github/workflows/Predefined_Action.yml
+++ b/.github/workflows/Predefined_Action.yml
@@ -7,5 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Repository
+        run: actions/checkout@v2
+      
       - name: Print Hello World
         run: echo "Hello, World!"
