--- a/.github/workflows/Predefined_Action.yml
+++ b/.github/workflows/Predefined_Action.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         run: actions/checkout@v2
       
       - name: Print Hello World
