--- a/.github/workflows/Basic_CI_CD_Pipeline.yml
+++ b/.github/workflows/Basic_CI_CD_Pipeline.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: List files
-        run: ls -al /home/runner/work/Practice_YAML/Practice_YAML/
+        run: ls -al /home/Practice_YAML/
       
       - name: set up Node.js
         uses: actions/setup-node@v2
